static/css/main.css
/*! normalize.css v3.0.2 | MIT License | git.io/normalize */html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:2em;margin:0.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace, monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}.hll{background-color:#ffc}.c{color:#999988;font-style:italic}.err{color:#a61717;background-color:#e3d2d2}.k{color:#000000;font-weight:bold}.o{color:#000000;font-weight:bold}.cm{color:#999988;font-style:italic}.cp{color:#999999;font-weight:bold;font-style:italic}.c1{color:#999988;font-style:italic}.cs{color:#999999;font-weight:bold;font-style:italic}.gd{color:#000000;background-color:#fdd}.ge{color:#000000;font-style:italic}.gr{color:#a00}.gh{color:#999}.gi{color:#000000;background-color:#dfd}.go{color:#888}.gp{color:#555}.gs{font-weight:bold}.gu{color:#aaa}.gt{color:#a00}.kc{color:#000000;font-weight:bold}.kd{color:#000000;font-weight:bold}.kn{color:#000000;font-weight:bold}.kp{color:#000000;font-weight:bold}.kr{color:#000000;font-weight:bold}.kt{color:#445588;font-weight:bold}.m{color:#099}.s{color:#d01040}.na{color:teal}.nb{color:#0086B3}.nc{color:#445588;font-weight:bold}.no{color:teal}.nd{color:#3c5d5d;font-weight:bold}.ni{color:purple}.ne{color:#990000;font-weight:bold}.nf{color:#990000;font-weight:bold}.nl{color:#990000;font-weight:bold}.nn{color:#555}.nt{color:navy}.nv{color:teal}.ow{color:#000000;font-weight:bold}.w{color:#bbb}.mf{color:#099}.mh{color:#099}.mi{color:#099}.mo{color:#099}.sb{color:#d01040}.sc{color:#d01040}.sd{color:#d01040}.s2{color:#d01040}.se{color:#d01040}.sh{color:#d01040}.si{color:#d01040}.sx{color:#d01040}.sr{color:#009926}.s1{color:#d01040}.ss{color:#990073}.bp{color:#999}.vc{color:teal}.vg{color:teal}.vi{color:teal}.il{color:#099}*{margin:0;padding:0;box-sizing:border-box}html{background:#fff}::selection{background:#D4D4D4}::-moz-selection{background:#D4D4D4}body{color:#383838;font-family:"Source Sans Pro",Helvetica,Arial,sans-serif;font-size:1.25em;word-wrap:break-word}h1,h2,h3,h4,h5,h6{font-family:"Source Sans Pro",Helvetica,Arial,sans-serif;line-height:1.3;margin:0.67em 0}h1 a,h2 a,h3 a,h4 a,h5 a,h6 a{color:#383838}h1{font-size:2.5em}h2{font-size:2em}h3{font-size:1.5em}h4{font-size:1.15em}blockquote{border-left:2px solid;padding:1em 1em}blockquote p:last-child,footer p:last-child{margin-bottom:0}table{table-layout:fixed;width:100%;word-wrap:break-word}@media (max-width: 1100px){table{overflow-x:scroll;display:inline-block}}td,th{padding:0.5em 1em;border:1px solid rgba(0,0,0,0.1);text-align:left}table,dl,blockquote,code,kbd,pre,samp{margin:1em 0}dt{font-weight:bold}dd{margin-left:2em}p,ol,ul,dl,.math-display{line-height:1.5;margin-bottom:1em}.math-display{display:inline-block;width:100%}ol,ul{list-style-position:inside}hr{border:0;border-top:1px solid rgba(0,0,0,0.1);border-bottom:1px solid #fff;margin:1em 0}a{color:#1ABC9C;text-decoration:none}.nav{list-style:none;margin:0;padding:0}iframe,img,embed,object,video{max-width:100%}img[align=left]{margin-right:3%}img[align=right]{margin-left:3%}.site-header{padding:3% 6%}@media (max-width: 1000px){.site-header{padding:3% 3%}}article,.comments,.feature-image .post-content,.call-out,.posts .post-teaser,.site-footer{padding:5% 20%}@media (max-width: 1000px){article,.comments,.feature-image .post-content,.call-out,.posts .post-teaser,.site-footer{padding:7.5% 12.5%}}article a:hover,.posts .post-teaser p a:hover{text-decoration:underline;color:#117964}.button{border-radius:0.3em;border:1px solid;display:inline-block;margin:1em 0;padding:0.5em 0.75em}a.button:hover{background:#1ABC9C;border:1px solid #1ABC9C;color:#fff;text-decoration:none}.disabled{opacity:0.7}article,.comments{border-bottom:1px solid rgba(0,0,0,0.1);float:left;width:100%}article header{margin-bottom:6%;text-align:center}article .footnotes{font-size:0.9em}header h1{margin:0}header .meta{color:rgba(56,56,56,0.5);font-size:0.9em;letter-spacing:0.1em;margin:0;text-transform:uppercase}.feature-image{padding:0%}.feature-image .post-link{color:#fff}.feature-image header{color:#fff;background-size:cover;margin-bottom:0;padding:8% 20%}.feature-image header .meta{color:rgba(255,255,255,0.7)}.call-out{display:inline-block;width:100%;background-color:#F98752;background-size:cover;font-size:1.2em;text-align:center;color:#FFF}.call-out p:last-child{margin-bottom:0}.posts .post-teaser{width:100%;margin-bottom:0;display:inline-block;background-size:cover;border-bottom:1px solid rgba(0,0,0,0.1)}.posts .excerpt{margin-top:1em}.pagination .button{margin:0 1.5em}.pagination .button i{vertical-align:middle}.pagination{padding:5% 20% 0 20%;text-align:center}.site-header{background:#fff;border-bottom:1px solid rgba(0,0,0,0.1);display:inline-block;float:left;width:100%}.site-header a{color:#383838}.site-header .avatar{height:2em;width:2em;float:left;margin-top:-3px;border-radius:0.2em;margin-right:1em}.site-header .site-title{float:left;font-weight:bold;font-size:1em;line-height:1.5}.site-header .site-nav ul{margin:0;padding:0;list-style:none;line-height:1.5;float:right;text-align:right}.site-header .site-nav li{display:inline;float:left;margin-right:0.4em}@media (max-width: 1100px){.site-header .site-nav ul{display:inline-block;float:left;padding-top:5%;text-align:left;width:100%}}.site-footer{display:inline-block;text-align:center;width:100%;color:#858585;font-size:0.9em}

/* CUSTOM CSS */
.site-header {
  background-color: white;
}

body {
  background-color: white;
}

div {
  text-align: justify;
  text-justify: inter-word;
}

.override-justify {
  text-align: left;
}

.site-footer {
  background-color: white;
}

.site-footer ul {
  display: inline-block;
  list-style-type: none;
}

.site-footer li {
  float: left;
}

a {
  color: midnightblue;
}

a:hover, article a:hover, .posts .post-teaser p a:hover {
  color: midnightblue;
}

a.button:hover {
  background-color: midnightblue;
  border: 1px solid white;
  color: snow;
}

/* see #6 */
.highlighttable td,th{padding:0;border:0;}td.code{width:95%;}

.event-segment {
  /*background-color: #F5F5F5;*/
  margin-bottom: 5%;
  padding: 8%;
}

.event-container {
  padding-left: 10%;
  padding-right: 10%;
}

.modal-header {
  width: 100%;
  padding: 24px;
  padding-bottom: 0;
}

#close-icon {
  color: rgba(38, 50, 56, 0.7);
}

#close-icon:hover {
  color: rgba(38, 50, 56, 1);
}

#close-modal {
  top: 12px;
  right: 12px;
  position: absolute;
}

nav {
  background-color: transparent;
  box-shadow: none;
}

.avatar {
  width: 10%;
}

.nav-wrapper {
  width: 100%;
}

.valign-wrapper {
  height: 100%;
}

